crates/biome_css_typed/tests/snapshots/keyword_only__box_sizing_valid_values.snap
---
source: crates/biome_css_typed/tests/keyword_only.rs
assertion_line: 102
expression: results
---
[
    Ok(
        BoxSizing(
            ContentBox,
        ),
    ),
    Ok(
        BoxSizing(
            BorderBox,
        ),
    ),
]
