crates/biome_css_typed/tests/snapshots/keyword_only__float_invalid_values.snap
---
source: crates/biome_css_typed/tests/keyword_only.rs
assertion_line: 68
expression: results
---
[
    Err(
        CssPropertyDiagnostic {
            kind: InvalidValue,
            range: Some(
                4..9,
            ),
        },
    ),
    Err(
        CssPropertyDiagnostic {
            kind: UnexpectedToken,
            range: Some(
                16..21,
            ),
        },
    ),
    Err(
        CssPropertyDiagnostic {
            kind: InvalidValue,
            range: Some(
                11..17,
            ),
        },
    ),
]
