crates/biome_css_typed/tests/snapshots/keyword_only__float_valid_values.snap
---
source: crates/biome_css_typed/tests/keyword_only.rs
assertion_line: 59
expression: results
---
[
    Ok(
        Float(
            Left,
        ),
    ),
    Ok(
        Float(
            Right,
        ),
    ),
    Ok(
        Float(
            None,
        ),
    ),
    Ok(
        Float(
            InlineStart,
        ),
    ),
    Ok(
        Float(
            InlineEnd,
        ),
    ),
]
