crates/biome_css_typed/tests/snapshots/keyword_only__visibility_invalid_values.snap
---
source: crates/biome_css_typed/tests/keyword_only.rs
assertion_line: 32
expression: results
---
[
    Err(
        CssPropertyDiagnostic {
            kind: InvalidValue,
            range: Some(
                4..14,
            ),
        },
    ),
    Err(
        CssPropertyDiagnostic {
            kind: InvalidValue,
            range: Some(
                16..23,
            ),
        },
    ),
    Err(
        CssPropertyDiagnostic {
            kind: UnexpectedToken,
            range: Some(
                24..30,
            ),
        },
    ),
    Err(
        CssPropertyDiagnostic {
            kind: UnexpectedToken,
            range: Some(
                25..31,
            ),
        },
    ),
]
