crates/biome_css_typed/tests/snapshots/keyword_only__visibility_valid_values.snap
---
source: crates/biome_css_typed/tests/keyword_only.rs
assertion_line: 23
expression: results
---
[
    Ok(
        Visibility(
            Visible,
        ),
    ),
    Ok(
        Visibility(
            Hidden,
        ),
    ),
    Ok(
        Visibility(
            Collapse,
        ),
    ),
]
